--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device --> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,23 +17,36 @@
   </style>
 </head>
 <body>
+    <div id="container">
+        <div id="order-card">
+            <img id="illustration-hero" src="images/illustration-hero.svg">
+            <h1>Order Summary</h1>
+            <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+            device anywhere you like!</p>
+            
+            <div id="plan-offert">
+                <div id='container-icon-music'>
+                    <img src="images/icon-music.svg">
+                </div>
+                <div id='container-plan'>
+                    <h3>Annual Plan</h3>
+                    <p>$59.99/year</p>             
+                </div>
+                <div id="container-link">
+                    <a><strong>Change</strong></a>
+                </div>
+            </div>
 
-  Order Summary
+            Proceed to Payment
+            Cancel Order
+        </div>
+    </div>
+    
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Daniel Alejandro Nieto Castro</a>.
   </div>
 </body>
 </html>
