Desktop version ready

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                     <a><strong>Change</strong></a>
                 </div>
             </div>
-
-            Proceed to Payment
-            Cancel Order
+            <button id="payment"class="button">Proceed to Payment</button>
+            <button class="button">Cancel Order</button>
         </div>
     </div>
     
